#
# Makefile.am - Copyright (c) 2001-2014 - Olivier Poncet
#
# This file is part of XCPC
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>
#
SUBDIRS = \
	$(NULL)

noinst_LTLIBRARIES = \
	libxcpc-awt.la

libxcpc_awt_la_SOURCES = \
	All.cc \
	All.h \
	Object.cc \
	Object.h \
	ObjectImpl.cc \
	ObjectImpl.h \
	ObjectListener.cc \
	ObjectListener.h \
	Component.cc \
	Component.h \
	ComponentImpl.cc \
	ComponentImpl.h \
	ComponentListener.cc \
	ComponentListener.h \
	Container.cc \
	Container.h \
	ContainerImpl.cc \
	ContainerImpl.h \
	ContainerListener.cc \
	ContainerListener.h \
	Window.cc \
	Window.h \
	WindowImpl.cc \
	WindowImpl.h \
	WindowListener.cc \
	WindowListener.h \
	Dialog.cc \
	Dialog.h \
	DialogImpl.cc \
	DialogImpl.h \
	DialogListener.cc \
	DialogListener.h \
	FileDialog.cc \
	FileDialog.h \
	FileDialogImpl.cc \
	FileDialogImpl.h \
	FileDialogListener.cc \
	FileDialogListener.h \
	OpenDialog.cc \
	OpenDialog.h \
	OpenDialogImpl.cc \
	OpenDialogImpl.h \
	OpenDialogListener.cc \
	OpenDialogListener.h \
	SaveDialog.cc \
	SaveDialog.h \
	SaveDialogImpl.cc \
	SaveDialogImpl.h \
	SaveDialogListener.cc \
	SaveDialogListener.h \
	QuitDialog.cc \
	QuitDialog.h \
	QuitDialogImpl.cc \
	QuitDialogImpl.h \
	QuitDialogListener.cc \
	QuitDialogListener.h \
	HelpDialog.cc \
	HelpDialog.h \
	HelpDialogImpl.cc \
	HelpDialogImpl.h \
	HelpDialogListener.cc \
	HelpDialogListener.h \
	AuthorsDialog.cc \
	AuthorsDialog.h \
	AuthorsDialogImpl.cc \
	AuthorsDialogImpl.h \
	AuthorsDialogListener.cc \
	AuthorsDialogListener.h \
	CopyingDialog.cc \
	CopyingDialog.h \
	CopyingDialogImpl.cc \
	CopyingDialogImpl.h \
	CopyingDialogListener.cc \
	CopyingDialogListener.h \
	VersionDialog.cc \
	VersionDialog.h \
	VersionDialogImpl.cc \
	VersionDialogImpl.h \
	VersionDialogListener.cc \
	VersionDialogListener.h \
	AboutDialog.cc \
	AboutDialog.h \
	AboutDialogImpl.cc \
	AboutDialogImpl.h \
	AboutDialogListener.cc \
	AboutDialogListener.h \
	$(NULL)

libxcpc_awt_la_CPPFLAGS = \
	-I$(top_srcdir)/src \
	$(NULL)

libxcpc_awt_la_LDFLAGS = \
	-L$(top_builddir)/src \
	$(NULL)

libxcpc_awt_la_LIBADD = \
	$(NULL)

EXTRA_DIST = \
	README.md
